@@ -263,3 +263,4 @@ Revision	Version Updated		Log Message
 242		C++			Convert diplomats to diplomacy points (1:2)
 243		C++			Tweaks to southern Arabia province mappings
 244		C++			Implement some pop creation rules that existed only in comments
+245		C++			Switch the parser from ASCII to ISO 8859-1.  Fixes parsing of commerce_inventions.txt.
